<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_resources_text">Study Resources</string>
    <string name="button_sample_text">Try Sample Questions</string>
    <string name="title_arithmetic">Arithmetic</string>
    <string name="title_algebra">Algebra</string>
    <string name="button_test_text">Start Test</string>
    <string name="button_return_text">Go back</string>
    <string name="text_choose">Choose what to study</string>
    <string name="text_mathematics">Math</string>
    <string name="text_science">Science</string>
    <string name="text_language">Language</string>
    <string name="text_aptitude">Aptitude</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim nulla aliquet porttitor lacus luctus accumsan tortor posuere. Eu consequat ac felis donec et odio. Pretium viverra suspendisse potenti nullam ac tortor. Ac feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper. Enim eu turpis egestas pretium. Risus nec feugiat in fermentum posuere urna nec tincidunt. Praesent elementum facilisis leo vel fringilla est ullamcorper. Turpis in eu mi bibendum neque. At risus viverra adipiscing at in tellus. Sed cras ornare arcu dui vivamus arcu felis bibendum. Vel orci porta non pulvinar. Blandit aliquam etiam erat velit scelerisque in dictum. Volutpat lacus laoreet non curabitur gravida arcu ac. Habitasse platea dictumst quisque sagittis purus. Ultrices mi tempus imperdiet nulla malesuada pellentesque elit. Convallis convallis tellus id interdum velit laoreet id. Feugiat in ante metus dictum. Id donec ultrices tincidunt arcu.  Gravida quis blandit turpis cursus in hac habitasse platea. Arcu non odio euismod lacinia at. Nam at lectus urna duis convallis. Auctor urna nunc id cursus metus aliquam. Mauris vitae ultricies leo integer malesuada nunc. Pharetra sit amet aliquam id diam maecenas. Gravida cum sociis natoque penatibus. Id aliquet risus feugiat in ante metus dictum. Feugiat scelerisque varius morbi enim nunc. Velit egestas dui id ornare arcu odio. Varius morbi enim nunc faucibus a. Augue lacus viverra vitae congue. Placerat duis ultricies lacus sed turpis tincidunt id aliquet risus. Etiam sit amet nisl purus in. Dictumst quisque sagittis purus sit. Purus in massa tempor nec feugiat nisl pretium. Dignissim convallis aenean et tortor at risus viverra adipiscing. Odio euismod lacinia at quis. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec.  Amet venenatis urna cursus eget nunc scelerisque viverra. Bibendum est ultricies integer quis auctor elit sed vulputate mi. Volutpat est velit egestas dui id ornare arcu odio. Feugiat pretium nibh ipsum consequat nisl vel. Egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Morbi tempus iaculis urna id volutpat lacus laoreet. Blandit libero volutpat sed cras. Placerat vestibulum lectus mauris ultrices eros in cursus. Nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae. Quis auctor elit sed vulputate. Auctor augue mauris augue neque gravida in fermentum. Pellentesque sit amet porttitor eget dolor morbi non arcu risus. Curabitur gravida arcu ac tortor dignissim convallis. Pharetra et ultrices neque ornare aenean euismod. Feugiat scelerisque varius morbi enim nunc faucibus a. Morbi blandit cursus risus at ultrices mi tempus imperdiet nulla. Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi.  Natoque penatibus et magnis dis parturient montes nascetur ridiculus mus. Libero nunc consequat interdum varius sit amet mattis vulputate enim. Nibh praesent tristique magna sit amet purus gravida. Tempus egestas sed sed risus pretium quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames. Integer feugiat scelerisque varius morbi. Ipsum dolor sit amet consectetur adipiscing elit. Ac tortor vitae purus faucibus ornare suspendisse. Elit sed vulputate mi sit. Porta nibh venenatis cras sed felis eget velit. Tempus quam pellentesque nec nam aliquam. Vitae congue eu consequat ac felis. Facilisi etiam dignissim diam quis enim lobortis. Pellentesque massa placerat duis ultricies lacus sed turpis tincidunt id. Ultrices sagittis orci a scelerisque purus semper. Consectetur adipiscing elit pellentesque habitant morbi.  Imperdiet sed euismod nisi porta lorem. Pellentesque pulvinar pellentesque habitant morbi tristique senectus. Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus. Consectetur adipiscing elit duis tristique sollicitudin nibh. Egestas maecenas pharetra convallis posuere morbi. Dolor sed viverra ipsum nunc aliquet. Donec massa sapien faucibus et molestie ac feugiat sed. Et leo duis ut diam quam nulla porttitor massa. In massa tempor nec feugiat nisl. A diam maecenas sed enim ut sem viverra. Interdum velit euismod in pellentesque. Cursus vitae congue mauris rhoncus. Leo urna molestie at elementum eu facilisis. Vel risus commodo viverra maecenas accumsan lacus. Etiam sit amet nisl purus in mollis. Et netus et malesuada fames ac turpis egestas sed tempus. Egestas fringilla phasellus faucibus scelerisque eleifend. Pellentesque habitant morbi tristique senectus et netus et.</string>
    <string name="text_about">About Us</string>
    <string name="topic_header_image_text">Topic Header Image</string>
    <string name="button_next_text">Next</string>
</resources>
