<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeFragment">

    <TextView
        android:id="@+id/text_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/text_choose"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_math"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:contentDescription="@string/text_mathematics"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_science"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_choose"
        app:srcCompat="@drawable/ic_mathematics" />

    <ImageButton
        android:id="@+id/button_science"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:contentDescription="@string/text_science"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/button_math"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_math"
        app:layout_constraintTop_toTopOf="@+id/button_math"
        app:srcCompat="@drawable/ic_science" />

    <ImageButton
        android:id="@+id/button_language"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:contentDescription="@string/text_language"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_aptitude"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_math"
        app:srcCompat="@drawable/ic_language" />

    <ImageButton
        android:id="@+id/button_aptitude"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:contentDescription="@string/text_aptitude"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/button_language"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_language"
        app:layout_constraintTop_toTopOf="@+id/button_language"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_aptitude" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:text="@string/text_about"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_aptitude"
        app:layout_constraintStart_toStartOf="@+id/button_language"
        app:layout_constraintTop_toBottomOf="@+id/button_language" />
</androidx.constraintlayout.widget.ConstraintLayout>